--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,16 @@
   --box-shadow:0 2rem 3rem var(--color-light);
 }
 
+/**********Dark theme variables**********/
+.dark-theme-variables{
+  --color-background:#181a1e;
+  --color-white:#202528;
+  --color-dark:#edeffd;
+  --color-dark-variant:#a3bdcc;
+  --color-light:rgba(0, 0, 0, 0.4);
+  --box-shadow:0 2rem 3rem var(--color-light);
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -57,7 +67,7 @@ body{
   width: 96%;
   margin: 0 auto;
   gap: 1.8rem;
-  grid-template-columns: 14rem auto 23rem;
+  grid-template-columns: 14rem auto 23rem ;
 }
 
 a{
@@ -517,6 +527,11 @@ main a{
   justify-content: center;
 }
 
+.right .sales-analytics .add-product:hover{
+  background:var(--color-primary);
+  color:white;
+}
+
 .right .sales-analytics .add-product div{
   display: flex;
   align-items: center;
@@ -560,8 +575,135 @@ main a{
   main .recent-orders{
     width: 94%;
     position: absolute;
-    left: 58%;
+    left: 50%;
     transform: translateX(-50%);
     margin: 2rem 0 0 8.8rem;
+  }
+
+  main .recent-orders table{
+    width: 83vw;
+  }
+
+  main table thead tr th:last-child,
+  main table thead tr th:first-child{
+    display: none;
+  }
+
+  main table tbody tr td:last-child,
+  main table tbody tr td:first-child{
+    display: none;
+  }
+}
+
+/*********MOBILE MEDIA QUERRIES************/
+
+@media screen and (max-width:768px){
+  .container{
+    width: 100%;
+    grid-template-columns: 1fr;
+  }
+
+  aside{
+    position: fixed;
+    left: -100%;
+    background: var(--color-white);
+    width: 18rem;
+    z-index: 3;
+    box-shadow: 1rem 3rem 4rem var(--color-light);
+    height: 100vh;
+    padding-right: var(--card-padding);
+    display: none;
+    animation: showMenu 400ms ease forwards;
+  }
+
+  @keyframes showMenu{
+    to{
+      left: 0;
+    }
+  }
+
+  aside .logo{
+    margin-left: 1rem;
+  }
+
+  aside .logo h2{
+    display: inline;
+  }
+
+  aside .sidebar h3{
+    display: inline;
+  }
+
+  aside .sidebar a{
+    width: 100%;
+    height: 3.4rem;
+  }
+  
+  aside .sidebar a:last-child{
+    position: absolute;
+    bottom: 5rem;
+  }
+
+  aside .close{
+    display: inline-block;
+    cursor: pointer;
+  }
+
+  main{
+    margin-top: 8rem;
+    padding: 0 1rem;
+  }
+
+  main .recent-orders{
+    position: relative;
+    margin: 3rem 0 0 0;
+    width: 100%;
+  }
+
+  main .recent-orders table{
+    width: 100%;
+    margin: 0;
+  }
+
+  .right{
+    width: 94%;
+    margin: 0 auto 4rem;
+  }
+
+  .right .top{
+    position: fixed;
+    top: 0;
+    left: 0;
+    align-items: center;
+    padding: 0 0.8rem;
+    height: 4.6rem;
+    background: var(--color-white);
+    width: 100%;
+    margin: 0;
+    z-index: 2;
+    box-shadow: 0 1rem 1rem var(--color-light);
+  }
+
+  .right .top .theme-toggler{
+    position: absolute;
+    width: 4.4rem;
+    left: 66%;
+  }
+
+  .right .profile .info{
+    display: none;
+  }
+
+  .right .top button{
+    display: inline-block;
+    background: transparent;
+    cursor: pointer;
+    color: var(--color-dark);
+    position: absolute;
+    left: 1rem;
+  }
+
+  .right .top button span{
+    font-size: 2rem;
   }
 }
